[package]
name = "merchant_o_rust"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
hyper = { version =  "0.14", features = ["full"] }
env_logger = "0.8"
log = "^0.4"
derive_more = "^0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"